--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -3,7 +3,7 @@
 --------------------------------------------*/
 
 .contact {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 
 
@@ -19,6 +19,7 @@
   &__subheading {
     text-align: center;
     max-width: 75%;
+    padding: 5rem 0;
   }
 
   // Padding-bottom stops form, heading and subheading being too vertically spread out
@@ -34,12 +35,9 @@
 
 @media only screen and (max-width: 1650px) {
   .contact {
-    height: 120%;
-
+    
     &__container { width: 45%; }
 
     &__subheading { max-width: 80%; }
-
-    &__form { padding-bottom: 0; }
   }
 }
