--- a/scss/pages/_loginRegister.scss
+++ b/scss/pages/_loginRegister.scss
@@ -3,7 +3,7 @@
 --------------------------------------------*/
 
 .login-register {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 
 
@@ -15,6 +15,8 @@
     padding: 12rem 0;
     @include display-flex($direction: column, $justify: space-between);
   }
+
+  &__heading { padding: 5rem 0; }
 }
 
 
@@ -35,7 +37,6 @@
 
 @media only screen and (max-width: 1650px) {
   .login-register {
-    height: 130%;
 
     &__container { width: 45%; }
   }
